--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -19,7 +19,7 @@
       <span class='firefly firefly5'></span>
     </div>
   </div>
-  <div class="fireflyGroup3">
+  <div class='fireflyGroup3'>
     <span class='firefly firefly6'></span>
   </div>
 </section>
@@ -265,13 +265,13 @@
 
   @keyframes firefly6 {
     0% {
-      transform: translate(0 ,0);
+      transform: translate(0, 0);
     }
     33% {
       transform: translate(0, -20rem);
     }
     75% {
-      transform: translate(0 ,0);
+      transform: translate(0, 0);
     }
   }
 </style>
