Prices and button rework

--- a/src/pages/creation-site-web.astro
+++ b/src/pages/creation-site-web.astro
@@ -1,5 +1,6 @@
 ---
 import HeroSiteWeb from "../components/HeroSiteWeb.astro"
+import Prices from "../components/Prices.astro"
 import Websites from "../components/Websites.astro"
 import Layout from "../layouts/Layout.astro"
 ---
@@ -8,5 +9,6 @@ import Layout from "../layouts/Layout.astro"
   <main>
     <HeroSiteWeb />
     <Websites />
+    <Prices />
   </main> 
 </Layout>
