--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -1,50 +1,81 @@
 ---
-const { addedClasses = "", color = "white" } = Astro.props;
+const { addedClasses = "" } = Astro.props;
 ---
 
-<button class=`borderedButton ${addedClasses}`>
-  <slot />
-</button>
+<div class=`buttonContainer ${addedClasses}`>
+  <div class='square square1'></div>
+  <div class='square square2'></div>
+  <button class='borderedButton'>
+    <slot />
+  </button>
+</div>
 
 <style lang='scss'>
-  .borderedButton {
-    color: white;
-    position: relative; /* or absolute */
-    background: #FFFFFF0A;
-    border: 1px solid white;
-    border-radius: 5rem;
-    padding: 2rem;
-    backdrop-filter: blur(5px);
-    white-space: nowrap;
-    width: max-content;
+  .buttonContainer {
+    position: relative;
+    container-type: normal;
+    &:hover {
+      .square1 {
+        transform: translateX(calc(100% - 6rem));
+      }
+      .square2 {
+        transform: translateX(calc(-100% + 6rem));
+      }
+    }
+  }
+  .square {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      top: 0;
-      left: 2.5rem;
-      width: calc(50% - 2.5rem);
-      height: 10px;
-      background: radial-gradient(farthest-side, #ffffff, #ffffff00);
-      transform: translate(0, -55%);
-      transition: transform 0.2s ease-in-out;
+      border: 16px solid transparent;
+      border-bottom: 3px solid white;
+      width: 0px;
+      height: 0px;
     }
     &::after {
       content: "";
       position: absolute;
-      bottom: 0;
-      right: 2.5rem;
-      width: calc(50% - 2.5rem);
-      height: 10px;
-      background: radial-gradient(farthest-side, #ffffff, #ffffff00);
-      transform: translate(0, 55%);
-      transition: transform 0.2s ease-in-out;
+      width: 0;
+      height: 0;
+      border: 16px solid transparent;
+      border-top: 3px solid white;
     }
-    &:hover {
-      &::before {
-        transform: translate(100%, -55%);
-      }
-      &::after {
-        transform: translate(-100%, 55%);
-      }
-    }  }
+    transform: translateX(0);
+    transition: transform 0.2s ease-in-out;
+  }
+  .square1 {
+    &::before {
+      bottom: 100%;
+      left: 2rem;
+    }
+    &::after {
+      top: 0;
+      left: 2rem;
+    }
+  }
+  .square2 {
+    &::before {
+      bottom: 0;
+      right: 2rem;
+    }
+    &::after {
+      top: 100%;
+      right: 2rem;
+    }
+  }
+  .borderedButton {
+    color: white;
+    background: #ffffff0a;
+    border: 1px solid white;
+    border-radius: 5rem;
+    padding: 1rem 2rem;
+    backdrop-filter: blur(5px);
+    white-space: nowrap;
+    width: max-content;
+    font-weight: bold;
+    font-size: 1.25rem;
+  }
 </style>
