--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -46,6 +46,7 @@
     gap: 10rem;
     flex-direction: column;
     padding: 0 12%;
+    padding-top: 10rem;
     &::before {
       content: "";
       position: absolute;
@@ -60,6 +61,16 @@
         #4f5e36 73%,
         rgba(113, 136, 71, 0) 100%
       );
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100vw;
+      height: 100%;
+      top: 50%;
+      left: 0;
+      background: linear-gradient(180deg, rgba(134, 132, 68, 0) 8.38%, #788142 34.95%, #436137 56.94%, rgba(30, 75, 51, 0) 100%);
+      z-index: 1;
     }
     h2 {
       color: rgba(255, 255, 255, 0.4);
