--- a/src/pages/creation-site-web.astro
+++ b/src/pages/creation-site-web.astro
@@ -1,6 +1,7 @@
 ---
 import HeroSiteWeb from "../components/HeroSiteWeb.astro"
 import Prices from "../components/Prices.astro"
+import Ecoconception from "../components/Ecoconception.astro"
 import Websites from "../components/Websites.astro"
 import Layout from "../layouts/Layout.astro"
 ---
@@ -10,5 +11,6 @@ import Layout from "../layouts/Layout.astro"
     <HeroSiteWeb />
     <Websites />
     <Prices />
+    <Ecoconception />
   </main> 
 </Layout>
