--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -71,8 +71,8 @@
     .peacock {
       position: absolute;
       bottom: 191px;
-      right: 0;
-      width: 40%;
+      right: 12%;
+      height: 50vh;
     }
   }
 </style>
