--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -123,6 +123,7 @@
       left: 50%;
       width: 2rem;
       height: 2rem;
+      animation: firefly1 10s ease-in-out infinite;
     }
     .firefly2 {
       top: 20%;
@@ -212,66 +213,142 @@
     }
   }
 
+  @keyframes firefly1 {
+    0% {
+      opacity: 0.1;
+    }
+    25% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 1;
+    }
+    75% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0.1;
+    }
+  }
+
   @keyframes firefly2 {
     0% {
       transform: translate(0rem, 0rem);
+      opacity: 1;
     }
     25% {
       transform: translate(3rem, 5rem);
+      opacity: 0.1;
     }
     50% {
       transform: translate(-1.5rem, -1.5rem);
+      opacity: 1;
     }
     100% {
       transform: translate(0rem, 0rem);
+      opacity: 1;
     }
   }
 
   @keyframes firefly3 {
     0% {
       transform: translate(0, 0);
+      opacity: 0.1;
     }
     25% {
       transform: translate(-20rem, 10rem);
+      opacity: 1;
     }
     50% {
       transform: translate(5rem, -10rem);
     }
     75% {
       transform: translate(-15rem, 10rem);
+      opacity: 1;
     }
     100% {
       transform: translate(0, 0);
+      opacity: 0.1;
     }
   }
 
   @keyframes firefly4 {
     0% {
       transform: translate(0, 0);
+      opacity: 1;
+    }
+    12% {
+      opacity: 0.1;
     }
     25% {
       transform: translate(-35rem, 20rem);
+      opacity: 1;
     }
     50% {
       transform: translate(-35rem, 20rem);
+      opacity: 1;
+    }
+    66% {
+      opacity: 0.1;
     }
     75% {
       transform: translate(-35rem, 20rem);
+      opacity: 1;
     }
     100% {
       transform: translate(0, 0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes firefly5 {
+    0% {
+      opacity: 1;
+    }
+    34% {
+      opacity: 0.1;
+    }
+    52% {
+      opacity: 1;
+    }
+    68% {
+      opacity: 0.1;
+    }
+    80% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
     }
   }
 
   @keyframes firefly6 {
     0% {
       transform: translate(0, 0);
+      opacity: 0.1;
+    }
+    10% {
+      opacity: 1;
     }
     33% {
       transform: translate(0, -20rem);
+      opacity: 1;
+    }
+    40% {
+      opacity: 1;
+    }
+    46% {
+      opacity: 0.1;
+    }
+    52% {
+      opacity: 1;
     }
     75% {
       transform: translate(0, 0);
+      opacity: 1;
+    }
+    100% {
+      opacity: 0.1;
     }
   }
 </style>
