--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -8,19 +8,7 @@ import BorderedButton from "./BorderedButton.astro";
     Et si on discutait de <strong>vos projets</strong><br /><em>ensemble ?</em>
   </h2>
   <BorderedButton addedClasses="contactButton">
-    <svg
-      width='52'
-      height='38'
-      viewBox='0 0 52 38'
-      fill='none'
-      xmlns='http://www.w3.org/2000/svg'
-    >
-      <path
-        d='M2.12256 18.5715L49.842 18.5715M49.842 18.5715L34.2505 35.8047M49.842 18.5715L34.2505 1.83063'
-        stroke='white'
-        stroke-width='3'
-        stroke-linecap='round'></path>
-    </svg>
+    Contactez-moi !
   </BorderedButton>
   <div class='shadow'></div>
 </section>
@@ -115,6 +103,5 @@ import BorderedButton from "./BorderedButton.astro";
   }
   :global(.contactButton) {
     z-index: 2;
-    padding: 2rem 3rem !important;
   }
 </style>
