--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -94,7 +94,7 @@
           content: url("/images/arrow-service-1.svg");
           position: absolute;
           top: 30%;
-          left: 170%;
+          left: 45vw;
         }
         &:nth-of-type(2) {
           align-self: flex-end;
@@ -103,14 +103,14 @@
             content: url("/images/arrow-service-2.svg");
             position: absolute;
             top: 40%;
-            right: 190%;
+            right: 55vw;
           }
         }
         &:nth-of-type(3)::before {
           content: url("/images/arrow-service-3.svg");
           position: absolute;
           bottom: 20%;
-          left: 180%;
+          left: 50vw;
         }
         p {
           line-height: 3rem;
