--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -13,7 +13,9 @@
       <li>Du gros caca</li>
     </ul>
   </div>
-  <img src="/images/peacock.jpg" alt="Peacock" class="peacock">
+  <div class="peacock">
+    <img src="/images/peacock.jpg" alt="Peacock">
+  </div>
 </section>
 
 <style lang='scss'>
@@ -73,6 +75,20 @@
       bottom: 191px;
       right: 12%;
       height: 50vh;
+      overflow: hidden;
+      &::before {
+        content: '';
+        position:absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        background: radial-gradient(closest-side, #01112000, #01112000 50%, #011120);
+      }
+      img {
+        height: 100%;
+      }
     }
   }
 </style>
