Last work mobile

--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -78,4 +78,9 @@ const { addedClasses = "" } = Astro.props;
     font-weight: bold;
     font-size: 1.25rem;
   }
+  @media screen and (max-width: 600px) {
+    .borderedButton {
+      font-size: 1rem;
+    }
+  }
 </style>
