--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,6 +31,7 @@ import Logo from "./Logo.astro";
     position: fixed;
     display: flex;
     width: 100%;
+    max-width: 100vw;
     justify-content: center;
     align-items: center;
     padding: 2em 12%;
@@ -95,6 +96,8 @@ import Logo from "./Logo.astro";
         position: relative;
         width: 30px;
         height: 20px;
+        display: block;
+        cursor: pointer;
         label {
           display: block;
           width: 100%;
