--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import Layout from "../layouts/Layout.astro";
     <Hero />
     <WebsiteCreation />
     <LastWork />
-    <SimpleSection />
-    <Technologies />
-    <Partners />
-    <ContactSection />
+    <!-- <SimpleSection /> -->
+    <!-- <Technologies /> -->
+    <!-- <Partners /> -->
+    <!-- <ContactSection /> -->
   </main>
 </Layout>
