--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,11 +1,10 @@
----
-
----
-
 <section id='hero'>
   <div id='title'>
     <h1></h1>
   </div>
+  <h1 id='mobileTitle'>
+    Développeur web <em>fullstack</em>, <strong>en freelance</strong> à Lille
+  </h1>
   <div class='contactWrapper'>
     <div class='contactAvatar'>
       <img src='/images/avatar.png' alt='Kevin Lanvin' />
@@ -39,6 +38,7 @@
     background-repeat: no-repeat;
     min-height: 100vh;
     padding-top: 165px;
+    overflow-y: visible;
     &::after {
       content: "";
       background-image: url("/images/fog1large.png");
@@ -61,6 +61,9 @@
       left: 0;
       animation: fog1movement 17s linear infinite forwards;
     }
+  }
+  #mobileTitle {
+    display: none;
   }
   #title {
     h1 {
@@ -172,10 +175,16 @@
       text-shadow: 0px 4px 10px #000000;
     }
     &::after {
-      content: url("/images/avatarArrow.svg");
+      content: "";
+      background: url("/images/avatarArrow.svg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center bottom;
       position: absolute;
-      bottom: 60%;
+      bottom: 80%;
       left: 33%;
+      height: 10rem;
+      width: 10rem;
     }
   }
 
@@ -185,6 +194,53 @@
     }
     to {
       transform: translateY(35%);
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    #hero {
+      background-position-x: center;
+      padding: 0 1rem;
+      height: calc(100vh - 80px);
+      max-height: calc(100vh - 80px);
+      #title {
+        display: none;
+      }
+      #mobileTitle {
+        display: block;
+        color: white;
+        font-size: 3rem;
+        font-family: Poppins;
+        font-weight: 300;
+        text-align: center;
+        max-width: 75rem;
+        line-height: 1.125em;
+        text-shadow:
+          0px 0px 20px #000000aa,
+          0px 0px 0.2em #000000aa;
+        strong {
+          font-weight: 900;
+        }
+        em {
+          font-weight: 200;
+          font-style: italic;
+        }
+      }
+      .contactWrapper {
+        width: 5rem;
+        height: 5rem;
+        span {
+          font-size: 1.25rem;
+          top: -6rem;
+          right: 0;
+          left: unset;
+        }
+        &::after {
+          height: 10rem;
+          width: 5rem;
+          bottom: 60%;
+        }
+      }
     }
   }
 </style>
