--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <div class='squareHammer'>
   <div class='square'></div>
   <div class='square'>
@@ -43,6 +39,20 @@
         transform: rotate(45deg);
         font-size: 2rem;
         color: #4f4f4f;
+      }
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .squareHammer {
+      gap: 1rem;
+      .square {
+        width: 10rem;
+        height: 10rem;
+        border-radius: 1rem;
+        .text {
+          font-size: 1.25rem;
+        }
       }
     }
   }
