--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -106,6 +106,11 @@ import Footer from "../components/Footer.astro";
     width: 100vw;
   }
 
+  section {
+    max-width: 100vw;
+    overflow-x: clip;
+  }
+
   a {
     cursor: pointer;
   }
