--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -19,4 +19,15 @@
       height: 100px;
     }
   }
+  @media screen and (max-width: 600px) {
+    .partners {
+      padding: 2rem 1rem;
+      gap: 1rem;
+      row-gap: 2rem;
+      flex-wrap: wrap;
+      .partner {
+        height: 50px;
+      }
+    }
+  }
 </style>
