--- a/src/components/SimpleSection.astro
+++ b/src/components/SimpleSection.astro
@@ -221,4 +221,18 @@
       transform: translateY(-50%) rotate(-100deg);
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .simpleSection {
+      padding: 5rem 1rem;
+      p {
+        padding: 2rem;
+        font-size: 1.5rem;
+        border-radius: 2rem;
+      }
+      .border-container {
+        border-radius: 2rem;
+      }
+    }
+  }
 </style>
