--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,10 +40,30 @@
       text-decoration: underline;
     }
     &::after {
-      content: url("/images/designArrow.svg");
+      content: "";
+      background: url("/images/designArrow.svg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: 220px;
+      height: 71px;
       position: absolute;
       top: 50%;
       right: 50%;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    footer {
+      flex-direction: column;
+      padding: 3rem 1rem;
+      gap: 3rem;
+      .design {
+        font-size: 1rem;
+        text-align: center;
+        &::after {
+          display: none;
+        }
+      }
     }
   }
 </style>
