--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -29,4 +29,15 @@ import TechnologyGraph from "./TechnologyGraph.astro";
       margin-right: 12%;
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .technologies {
+      h2 {
+        font-size: 3rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
 </style>
