Fix homepage mobile little shits

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -231,14 +231,18 @@
         height: 8rem;
         span {
           font-size: 1.25rem;
-          top: -6rem;
-          right: 0;
+          top: -3rem;
+          right: 2rem;
           left: unset;
         }
         &::after {
-          height: 10rem;
+          height: 5rem;
           width: 5rem;
-          bottom: 80%;
+          bottom: 35%;
+          right: -10%;
+          left: unset;
+          transform-origin: top left;
+          transform: rotate(-25deg);
         }
       }
     }
