--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -108,6 +108,9 @@ import BorderedButton from "./BorderedButton.astro";
   @media screen and (max-width: 600px) {
     .contactSection {
       padding: 0 1rem;
+      padding-top: 10rem;
+      gap: 2rem;
+      justify-content: flex-start;
       h2 {
         font-size: 2rem;
         line-height: 3rem;
