--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -55,8 +55,10 @@
   @media screen and (max-width: 600px) {
     footer {
       flex-direction: column;
-      padding: 2rem 1rem;
+      padding: 2rem 0;
+      width: calc(100% - 2rem);
       gap: 2rem;
+      height: max-content;
       .design {
         font-size: 1rem;
         text-align: center;
